--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Black.NoTitleBar.Fullscreen">
         <!-- Customize your theme here. -->
+        <item name="android:colorBackground">@android:color/black</item>
     </style>
 
 </resources>
